# ustc_pde_agent

./: .gitignore  README.md  all_results.json
auto-pde-agent/: .gitignore  README.md  pyproject.toml  run_benchmark_dual.py  test_agent.py
auto-pde-agent/.cursor/rules/: project.mdc
auto-pde-agent/.github/: .codecov.yml
auto-pde-agent/.github/workflows/: check-links-periodic.yaml  fire.yaml
auto-pde-agent/docs/: index.md  quickstart.md
auto-pde-agent/docs/advanced/: control_flow.md  cookbook.md  global_configuration.md  v2_migration.md  yaml_configuration.md
auto-pde-agent/docs/overrides/: main.html
auto-pde-agent/docs/reference/: index.md
auto-pde-agent/docs/usage/: inspector.md  swebench.md
auto-pde-agent/src/autopdeagent/: __init__.py
pde-agent-bench/: .gitignore  AGENT_TASK.md  DEALII_GUIDE.md  DOLFINX_GUIDE.md  EXPERIMENTS_GUIDE.md  README.md  experiment.jsonl  experiment_history.jsonl  pyproject.toml
pde-agent-bench/cases/: schema.case.json
pde-agent-bench/cases/advection_pure_supg/: config.json  description.md  test_fix_accuracy.py  test_fix_time.py
pde-agent-bench/cases/biharmonic_basic_sin/: config.json  description.md  test_fix_accuracy.py  test_fix_time.py
pde-agent-bench/cases/biharmonic_boundary_layer_like/: config.json  description.md  test_fix_accuracy.py  test_fix_time.py
pde-agent-bench/cases/biharmonic_exponential_mode/: config.json  description.md  test_fix_accuracy.py  test_fix_time.py
pde-agent-bench/cases/biharmonic_high_mode_trig/: config.json  description.md  test_fix_accuracy.py  test_fix_time.py
pde-agent-bench/cases/biharmonic_multimode_superposition/: config.json  description.md  test_fix_accuracy.py  test_fix_time.py
pde-agent-bench/cases/biharmonic_no_exact_gaussian_source/: config.json  description.md  test_fix_accuracy.py  test_fix_time.py
pde-agent-bench/cases/biharmonic_no_exact_nonzero_bc/: config.json  description.md  test_fix_accuracy.py  test_fix_time.py
pde-agent-bench/cases/biharmonic_no_exact_oscillatory_rhs/: config.json  description.md  test_fix_accuracy.py  test_fix_time.py
pde-agent-bench/cases/biharmonic_no_exact_quadrilateral_oscillatory_rhs/: config.json  description.md  test_fix_accuracy.py  test_fix_time.py
pde-agent-bench/cases/biharmonic_no_exact_sign_changing_rhs/: config.json  description.md  test_fix_accuracy.py  test_fix_time.py
pde-agent-bench/cases/biharmonic_p2_elements/: config.json  description.md  test_fix_accuracy.py  test_fix_time.py
pde-agent-bench/cases/biharmonic_polynomial_zero_bc/: config.json  description.md  test_fix_accuracy.py  test_fix_time.py
pde-agent-bench/cases/biharmonic_quadrilateral_mesh/: config.json  description.md  test_fix_accuracy.py  test_fix_time.py
pde-agent-bench/cases/biharmonic_quadrilateral_p2/: config.json  description.md  test_fix_accuracy.py  test_fix_time.py
pde-agent-bench/cases/biharmonic_tanh_shear_layer/: config.json  description.md  test_fix_accuracy.py  test_fix_time.py
pde-agent-bench/cases/convdiff_elliptic_high_pe_strong_x_supg/: config.json  description.md  test_fix_accuracy.py  test_fix_time.py
pde-agent-bench/cases/convdiff_elliptic_high_pe_strong_y_supg/: config.json  description.md  test_fix_accuracy.py  test_fix_time.py
pde-agent-bench/cases/convdiff_elliptic_low_pe_cos_mix/: config.json  description.md  test_fix_accuracy.py  test_fix_time.py
pde-agent-bench/cases/convdiff_elliptic_low_pe_polynomial/: config.json  description.md  test_fix_accuracy.py  test_fix_time.py
pde-agent-bench/cases/convdiff_elliptic_medium_pe_diagonal_high_freq/: config.json  description.md  test_fix_accuracy.py  test_fix_time.py
pde-agent-bench/cases/convdiff_elliptic_medium_pe_exp_layer/: config.json  description.md  test_fix_accuracy.py  test_fix_time.py
pde-agent-bench/cases/convdiff_elliptic_medium_pe_rotated/: config.json  description.md  test_fix_accuracy.py  test_fix_time.py
pde-agent-bench/cases/convdiff_elliptic_no_exact_gaussian_source/: config.json  description.md  test_fix_accuracy.py  test_fix_time.py
pde-agent-bench/cases/convdiff_elliptic_no_exact_oscillatory_rhs/: config.json  description.md  test_fix_accuracy.py  test_fix_time.py
pde-agent-bench/cases/convdiff_elliptic_p2_moderate_pe/: config.json  description.md  test_fix_accuracy.py  test_fix_time.py
pde-agent-bench/cases/convdiff_elliptic_quadrilateral_low_pe/: config.json  description.md  test_fix_accuracy.py  test_fix_time.py
pde-agent-bench/cases/convdiff_elliptic_quadrilateral_medium_pe/: config.json  description.md  test_fix_accuracy.py  test_fix_time.py
pde-agent-bench/cases/convdiff_elliptic_reverse_flow_supg/: config.json  description.md  test_fix_accuracy.py  test_fix_time.py
pde-agent-bench/cases/convdiff_gaussian_source_no_exact/: config.json  description.md  test_fix_accuracy.py  test_fix_time.py
pde-agent-bench/cases/convdiff_high_pe/: config.json  description.md  test_fix_accuracy.py  test_fix_time.py
pde-agent-bench/cases/convdiff_high_pe_reverse_flow_supg/: config.json  description.md  test_fix_accuracy.py  test_fix_time.py
pde-agent-bench/configs/: parallel.yaml
pde-agent-bench/data/: DATASET_GENERATION_GUIDE.md  README.md  benchmark.jsonl  benchmark_v1.jsonl  benchmark_v2.jsonl
pde-agent-bench/datasets/: full_benchmark.jsonl  level_2_1_basic.jsonl  level_2_2_stability.jsonl
pde-agent-bench/docker/: Dockerfile.dealii  Dockerfile.firedrake  build_images.sh
pde-agent-bench/experiments/: minisweagent.sh  openhands.sh
pde-agent-bench/pdebench/: __init__.py
pde-agent-bench/results/: all_results.json
pde-agent-bench/scripts/: build_cases.py  check_scipy.py  final_test.py  generate_leaderboard_v2.py  nohup.out  prepare_agent_workspace.py  run_benchmark.py  run_benchmark_parallel.py  run_evaluation.py  solver.py  test_accuracy.py  test_edge_cases.py  test_mpi.py  test_oracle_cases.py  test_performance.py
pde-agent-bench/test_oracle_output/: u.npy
pde-agent-bench/tests/: __init__.py  test_case_validation.py  test_smoke_demo.py
pde-agent-bench/workspace_openhands/: instruction.txt  solver.py
(+14654 files in other folders)
